# chainsop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: chainbuild.rs
src/: errors.rs  executable.rs  execution.rs  filehandling.rs  lib.rs  operations.rs
src/filehandling/: accesses.rs  defs.rs
src/filehandling/filesprep_derive/: Cargo.toml  README.md
src/filehandling/filesprep_derive/src/: lib.rs
src/operations/: chained.rs  function.rs  generic.rs  subproc.rs
