[package]
name = "filesprep_derive"
version = "0.1.0"
edition = "2021"
description = "Defines derive macro for the FilesPrep trait on a FileTransformation field"
authors = ["Kevin Quick <kq1quick@gmail.com>"]
license = "MIT OR Apache-2.0"
# homepage
# repository
# documentation

[lib]
proc-macro = true


[dependencies]
syn = "1.0"
quote = "1.0"
